// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/Auth/ResetPasswordForm Failure 1`] = `
<section
  className="max-w-2xl mx-auto p-5 text-center"
  data-test="ResetPasswordFailed"
>
  <div
    className="p-5"
  />
  <p>
    Le mot de passe n'a pas pu être réinitialisé... 
  </p>
  <p>
    some api error message here
  </p>
  <div
    className="p-5"
  />
</section>
`;

exports[`Storyshots app/pages/Auth/ResetPasswordForm Success 1`] = `
<section
  className="max-w-2xl mx-auto p-5 text-center"
  data-test="ResetPasswordSucceed"
>
  <div
    className="p-5"
  />
  <p>
    Votre mot de passe a bien été réinitialisé !
  </p>
  <div
    className="p-5"
  />
  <div>
    <a
      className="fr-btn"
      href="/auth/signin"
      onClick={[Function]}
    >
      Se connecter
    </a>
  </div>
</section>
`;
